--- a/src/css/components/_utilities.scss
+++ b/src/css/components/_utilities.scss
@@ -11,6 +11,6 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     font-family: $font;
-    margin: $view-margin;
+    padding: $view-margin;
     font-weight: 700;
 }
