--- a/src/html/templates/categories.ejs
+++ b/src/html/templates/categories.ejs
@@ -1,10 +1,9 @@
 <%- include("../partials/head.ejs") %>
-<title>Categories</title>
 <%- include("../partials/nav.ejs") %>
 
 <main>
-    <h1 class="page-heading">Categories</h1>
-    <article>
+    <article class="category-page">
+        <h1 class="page-heading">Categories</h1>
         <ul class="category-list">
             <li class="category-list__item">
                 <div class="genre-container">
