--- a/src/css/components/_albums.scss
+++ b/src/css/components/_albums.scss
@@ -1,6 +1,8 @@
 .albums-page {
-    margin: $page-margin;
+    padding: $page-margin;
     font-family: $font;
+    position: relative;
+    overflow: hidden;
 
     .featured-albums-text-container {
         display: flex;
@@ -26,13 +28,20 @@
     .img-list {
         display: flex;
         list-style: none;
-        overflow: hidden;
+        -overflow: hidden;
+
 
         .img-list__item {
-            padding-right: 15px;
+            margin-right: 15px;
+
 
             .img-list__img {
+
+
                 border-radius: 8px;
+                -webkit-box-shadow: 0px 0px 65px -18px rgba(0, 0, 0, 0.23);
+                -moz-box-shadow: 0px 0px 65px -18px rgba(0, 0, 0, 0.23);
+                box-shadow: 0px 0px 65px -18px rgba(0, 0, 0, 0.23);
             }
 
         }
@@ -70,6 +79,7 @@
 
             .song-list__img {
                 border-radius: 4px;
+
             }
 
             .song-list__song-text {
@@ -77,9 +87,37 @@
                 grid-template-columns: 1fr auto;
                 grid-template-rows: 1fr 1fr;
 
-                .song-list__song- {
+                .song-list__song-name {
                     text-decoration: none;
+                    text-transform: capitalize;
+                    font-size: 15px;
+                    font-weight: 500;
+                    color: $primary-color;
+
                 }
+
+                .song-list__song-artist {
+                    text-decoration: none;
+                    text-transform: capitalize;
+                    font-size: 12px;
+                    font-weight: 100;
+                    color: $primary-color;
+                    grid-column: 1;
+                    grid-row: 2;
+
+                }
+
+                .song-list__songs {
+                    text-decoration: none;
+                    text-transform: capitalize;
+                    font-size: 12px;
+                    font-weight: 100;
+                    color: $primary-color;
+                    place-self: center;
+                    grid-column: 2;
+                    grid-row: span 2;
+                }
+
             }
         }
     }
