--- a/src/css/components/_featured.scss
+++ b/src/css/components/_featured.scss
@@ -1,41 +1,47 @@
-.featured-list {
-    margin: 1.5625rem;
-    list-style: none;
+.featured-page {
 
-    .featured-list__item {
-        position: relative;
-        margin-bottom: 3.0125rem;
-        -webkit-box-shadow: 0px 0px 25px 14px rgba(0, 0, 0, 0.09);
-        -moz-box-shadow: 0px 0px 25px 14px rgba(0, 0, 0, 0.09);
-        box-shadow: 0px 0px 25px 14px rgba(0, 0, 0, 0.09);
-        border-radius: 8px;
+    padding: $page-margin;
 
+    .page-heading {}
 
-        .featured-list__img {
+    .featured-list {
+        list-style: none;
+
+        .featured-list__item {
             position: relative;
+            margin-bottom: 3.0125rem;
+            -webkit-box-shadow: 0px 0px 25px 14px rgba(0, 0, 0, 0.09);
+            -moz-box-shadow: 0px 0px 25px 14px rgba(0, 0, 0, 0.09);
+            box-shadow: 0px 0px 25px 14px rgba(0, 0, 0, 0.09);
             border-radius: 8px;
-            display: block;
 
+
+            .featured-list__img {
+                position: relative;
+                border-radius: 8px;
+                display: block;
+
+            }
+
+            .featured-list__text-container {
+                position: absolute;
+                bottom: 5.3em;
+
+            }
+
+            .featured-list__heading {
+                padding: 0 0 0 1.1875rem;
+                font-size: 2rem;
+                word-break: break-word;
+                margin: 0 0 0.5em 0;
+            }
+
+            .featured-list__sub-heading {
+                padding: 0 0 0 1.1875rem;
+                font-size: 0.75rem;
+
+            }
         }
 
-        .featured-list__text-container {
-            position: absolute;
-            bottom: 5.3em;
-
-        }
-
-        .featured-list__heading {
-            padding: 0 0 0 1.1875rem;
-            font-size: 2rem;
-            word-break: break-word;
-            margin: 0 0 0.5em 0;
-        }
-
-        .featured-list__sub-heading {
-            padding: 0 0 0 1.1875rem;
-            font-size: 0.75rem;
-
-        }
     }
-
 }
