--- a/src/css/components/_footer-nav.scss
+++ b/src/css/components/_footer-nav.scss
@@ -4,11 +4,12 @@
     align-items: center;
     list-style: none;
     padding: 0.625rem 2rem;
-    -webkit-box-shadow: 0px 0px 25px 14px rgba(255, 255, 255, 0.09);
-    -moz-box-shadow: 0px 0px 25px 14px rgba(255, 255, 255, 0.09);
-    box-shadow: 0px 0px 25px 14px rgba(255, 255, 255, 0.09);
+    -webkit-box-shadow: 0px 0px 25px 14px rgba(0, 0, 0, 0.09);
+    -moz-box-shadow: 0px 0px 25px 14px rgba(0, 0, 0, 0.09);
+    box-shadow: 0px 0px 25px 14px rgba(0, 0, 0, 0.09);
     position: fixed;
     bottom: 0;
     width: 100vw;
     background: #ffffff;
+    overflow: hidden;
 }
