--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -7,6 +7,7 @@
 @import'./components/featured';
 @import'./components/categories';
 @import'./components/albums';
+@import'./components/albumDetails';
 
 
 // Bottom Components
