--- a/src/html/templates/featured.ejs
+++ b/src/html/templates/featured.ejs
@@ -3,8 +3,8 @@
 <%- include("../partials/nav.ejs") %>
 
 <main>
-    <h1 class="page-heading">Featured</h1>
-    <article>
+    <article class="featured-page">
+        <h1 class="page-heading">Featured</h1>
         <ul class="featured-list">
             <li class="featured-list__item">
                 <img class="featured-list__img" src="https://via.placeholder.com/325x425" alt="placeholder">
