--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -8,6 +8,8 @@
 @import'./components/categories';
 @import'./components/albums';
 @import'./components/albumDetails';
+@import'./components/playlist';
+@import'./components/player';
 
 
 // Bottom Components
