--- a/src/html/templates/playlist.ejs
+++ b/src/html/templates/playlist.ejs
@@ -37,7 +37,7 @@
 
                         <a class="play-list__play-artist" href="">Artist</a>
 
-                        <a class="play-list__numOfplays" href="">12 plays</a>
+                        <a class="play-list__numOfPlays" href="">12 plays</a>
                     </article>
                 </li>
                 <li class="play-list__items">
@@ -55,7 +55,7 @@
 
                         <a class="play-list__play-artist" href="">Artist</a>
 
-                        <a class="play-list__numOfplays" href="">12 plays</a>
+                        <a class="play-list__numOfPlays" href="">12 plays</a>
                     </article>
                 </li>
                 <li class="play-list__items">
@@ -73,7 +73,7 @@
 
                         <a class="play-list__play-artist" href="">Artist</a>
 
-                        <a class="play-list__numOfplays" href="">12 plays</a>
+                        <a class="play-list__numOfPlays" href="">12 plays</a>
                     </article>
                 </li>
                 <li class="play-list__items">
@@ -91,7 +91,7 @@
 
                         <a class="play-list__play-artist" href="">Artist</a>
 
-                        <a class="play-list__numOfplays" href="">12 plays</a>
+                        <a class="play-list__numOfPlays" href="">12 plays</a>
                     </article>
                 </li>
 
