--- a/src/html/templates/player.ejs
+++ b/src/html/templates/player.ejs
@@ -1,5 +1,5 @@
 <%- include("../partials/head.ejs") %>
-<title>Featured!</title>
+<title>Featured</title>
 <%- include("../partials/nav.ejs") %>
 
 <main>
