--- a/src/html/templates/player.ejs
+++ b/src/html/templates/player.ejs
@@ -13,10 +13,20 @@
                     NAME OF SONG
                 </h1>
                 <p class="player__artist-name">
-                    NAME OF player__artist-name
+                    NAME OF Artist
                 </p>
             </div>
             <div class="player-tools">
+                <div class="progress-bar__container">
+                    <div class="progress-bar__bar">
+                        <div class="progress__dot"></div>
+                    </div>
+                    <div class="progress-bar__time-frame">
+                        <p class="start-point">0:00</p>
+                        <p class="end-point">3:20</p>
+
+                    </div>
+                </div>
                 <div class="player-tools__btn">
                     <img src="/assets/images/player-backward.svg" alt="" class="player-tools__back">
                     <img src="/assets/images/player-rewind.svg" alt="" class="player-tools__rewind">
@@ -31,3 +41,4 @@
     </article>
 
 </main>
+<%- include("../partials/after-footer.ejs") %>
