--- a/src/css/components/_albums.scss
+++ b/src/css/components/_albums.scss
@@ -73,7 +73,7 @@
 
         .song-list__items {
             display: grid;
-            grid-template-columns: auto 1fr;
+            grid-template-columns: 64px 1fr;
             gap: 18px;
             margin: 0 0 1.5rem;
 
