--- a/src/css/components/_variables.scss
+++ b/src/css/components/_variables.scss
@@ -6,3 +6,5 @@ $linearText1:#EE0979;
 $linearText2:#FF6A00;
 $view-margin: 0 0 1.5625rem;
 $page-margin:5.9375rem 1.5625rem 5rem;
+
+// html[data-theme='dark']
