--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,5 +1,7 @@
 // Top Components 
 @import './components/variables';
+@import './components/dark-mode';
+
 @import './components/nav';
 @import'./components/utilities';
 
