--- a/src/html/templates/albumDetails.ejs
+++ b/src/html/templates/albumDetails.ejs
@@ -27,24 +27,24 @@
 
             <ul class="track-list">
                 <li class="track-list__items">
-                    <figure>
+                    <figure class="track-list__img-bg">
                         <img class="track-list__img" src="/assets/images/ionplay.svg" alt=""
                             class="track-list__track-cover">
 
                     </figure>
                     <article class="track-list__track-text">
-                        <h4 class="track-list__track-name">
-                            <a class="track-list__track-link" href="">track name</a>
 
-                        </h4>
-                        <h5 class="track-list__tracks" class="track-list__track-artist">
+                        <a class="track-list__track-name" href="">track name</a>
 
-                            <a class="track-list__artist" href="">Artist</a>
-                        </h5 class="track-list__tracks">
+
+
+
+                        <a class="track-list__track-artist" href="">Artist</a>
+
                         <a class="track-list__numOfTracks" href="">12 tracks</a>
                     </article>
                 </li>
-                <li class="track-list__items">
+                <!--            <li class="track-list__items">
                     <figure>
                         <img class="track-list__img" src="/assets/images/ionplay.svg" alt=""
                             class="track-list__track-cover">
@@ -79,7 +79,7 @@
                         </h5>
                         <a class="track-list__tracks" href="">12 tracks</a>
                     </article>
-                </li>
+                </li> -->
             </ul>
 
         </section>
@@ -89,3 +89,4 @@
 </main>
 <%- include("../partials/footer-nav.ejs") %>
 <%- include("../partials/after-footer.ejs") %>
+<script src="/assets/javascript/albumDetails.js"></script>
