--- a/src/html/templates/albums.ejs
+++ b/src/html/templates/albums.ejs
@@ -63,9 +63,12 @@
     </article>
 
 </main>
-<template id="albumTemplate">
-    <li class="img-list__item"> <img class="img-list__img" src="https://via.placeholder.com/130x130" alt="placeholder">
-    </li>
+<template id="albumTemplate"><a href="">
+
+        <li class="img-list__item"> <img class="img-list__img" src="https://via.placeholder.com/130x130"
+                alt="placeholder">
+        </li>
+    </a>
 
 </template>
 
