--- a/src/css/components/_albums.scss
+++ b/src/css/components/_albums.scss
@@ -12,7 +12,7 @@
 
         .featured-albums-sub-heading {
             font-size: 15px;
-            color: $primary-color;
+            color: var(--secondary-color);
 
         }
 
@@ -37,7 +37,8 @@
 
             .img-list__img {
 
-
+                width: 130px;
+                height: 130px;
                 border-radius: 8px;
                 -webkit-box-shadow: 0px 0px 65px -18px rgba(0, 0, 0, 0.23);
                 -moz-box-shadow: 0px 0px 65px -18px rgba(0, 0, 0, 0.23);
@@ -53,10 +54,9 @@
         align-items: center;
         padding: 1rem 0 1.2rem 0;
 
-        .featured-albums-sub-heading {
+        .new-releases-sub-heading {
             font-size: 15px;
-            color: $primary-color;
-
+            color: var(--secondary-color)
         }
 
         .view-all {
@@ -92,7 +92,7 @@
                     text-transform: capitalize;
                     font-size: 15px;
                     font-weight: 500;
-                    color: $primary-color;
+                    color: var(--secondary-color);
 
                 }
 
@@ -101,7 +101,7 @@
                     text-transform: capitalize;
                     font-size: 12px;
                     font-weight: 100;
-                    color: $primary-color;
+                    color: var(--secondary-color);
                     grid-column: 1;
                     grid-row: 2;
 
@@ -112,7 +112,7 @@
                     text-transform: capitalize;
                     font-size: 12px;
                     font-weight: 100;
-                    color: $primary-color;
+                    color: var(--secondary-color);
                     place-self: center;
                     grid-column: 2;
                     grid-row: span 2;
