--- a/src/html/partials/footer-nav.ejs
+++ b/src/html/partials/footer-nav.ejs
@@ -1,15 +1,71 @@
 <nav class="footer-nav">
     <ul class="footer-list">
-        <li class="footer-list__item"><a href="" class="footer-list__link"><img src="/assets/images/ionpulse.svg"
-                    alt="pulse icon">
+        <li class="footer-list__item"><a href="/albums" class="footer-list__link"><svg
+                    xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="21.544"
+                    height="20" viewBox="0 0 21.544 20">
+                    <defs>
+                        <linearGradient id="linear-gradient" y1="0.425" x2="1" y2="0.425"
+                            gradientUnits="objectBoundingBox">
+                            <stop offset="0" stop-color="#ee0979" />
+                            <stop offset="1" stop-color="#ff6a00" />
+                        </linearGradient>
+                    </defs>
+                    <path id="_ionicons_svg_ios-pulse"
+                        d="M51.36,58.764a2.322,2.322,0,0,0-2.318,1.582H47.171L45.806,56.24a.769.769,0,0,0-.731-.529H45.06a.76.76,0,0,0-.721.558L42.2,63.737l-.3-1.8-2.215-13.3a.772.772,0,0,0-1.51-.063L35.626,60.346H32.769a.769.769,0,1,0,0,1.539h3.462a.767.767,0,0,0,.745-.582l1.8-8.761,2.467,14.806a.764.764,0,0,0,.717.64H42a.772.772,0,0,0,.741-.558l2.39-8.348.755,2.275a.776.776,0,0,0,.731.529h2.457a2.309,2.309,0,1,0,2.284-3.121Z"
+                        transform="translate(-32 -47.987)" fill="url(#linear-gradient)" />
+                </svg>
+
             </a></li>
-        <li class="footer-list__item"><a href="" class="footer-list__link"><img src="/assets/images/ionmic.svg"
-                    alt="pulse icon"></a></li>
-        <li class="footer-list__item"><a href="" class="footer-list__link"><img src="/assets/images/ionsignal.svg"
-                    alt="pulse icon"></a></li>
-        <li class="footer-list__item"><a href="" class="footer-list__link"><img src="/assets/images/ionmode.svg"
-                    alt="pulse icon"></a></li>
-        <li class="footer-list__item"><a href="" class="footer-list__link"><img src="/assets/images/ionsettings.svg"
-                    alt="pulse icon"></a></li>
+        <li class="footer-list__item"><a href="/playlist" class="footer-list__link"><svg
+                    xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="12.857"
+                    height="20" viewBox="0 0 12.857 20">
+                    <defs>
+                        <linearGradient id="linear-gradient" y1="0.42" x2="1" y2="0.42"
+                            gradientUnits="objectBoundingBox">
+                            <stop offset="0" stop-color="#ee0979" />
+                            <stop offset="1" stop-color="#ff6a00" />
+                        </linearGradient>
+                    </defs>
+                    <path id="_ionicons_svg_ios-microphone"
+                        d="M121.061,39.679H124.3a.548.548,0,0,0,.554-.527.536.536,0,0,0-.536-.545h-3.259a.536.536,0,0,1-.536-.545.548.548,0,0,1,.554-.527h3.415a.355.355,0,0,0,.357-.366,5.375,5.375,0,0,0-3.246-4.732.357.357,0,0,0-.5.326v1.585a.548.548,0,0,1-.527.554.536.536,0,0,1-.545-.536v-1.83a.536.536,0,0,0-1.071,0v2.527a.548.548,0,0,1-.527.554.536.536,0,0,1-.545-.536V32.536a.536.536,0,0,0-1.071,0v1.813a.548.548,0,0,1-.527.554.536.536,0,0,1-.545-.536v-1.6a.356.356,0,0,0-.5-.326A5.372,5.372,0,0,0,112,37.17a.355.355,0,0,0,.357.366h3.415a.548.548,0,0,1,.554.527.536.536,0,0,1-.536.545h-3.241a.548.548,0,0,0-.554.527.536.536,0,0,0,.536.545h3.241a.548.548,0,0,1,.554.527.536.536,0,0,1-.536.545h-3.241a.548.548,0,0,0-.554.527.536.536,0,0,0,.536.545h3.241a.548.548,0,0,1,.554.527.536.536,0,0,1-.536.545H112.36a.355.355,0,0,0-.357.366,5.44,5.44,0,0,0,.353,1.732.353.353,0,0,0,.33.223h11.478a.35.35,0,0,0,.33-.223,5.207,5.207,0,0,0,.353-1.732.355.355,0,0,0-.357-.366h-3.415a.548.548,0,0,1-.554-.527.536.536,0,0,1,.536-.545H124.3a.548.548,0,0,0,.554-.527.536.536,0,0,0-.536-.545h-3.241a.536.536,0,1,1-.013-1.071Zm-7.746,6.9a5.264,5.264,0,0,0,3.366,1.821.36.36,0,0,1,.317.353v1.817a1.429,1.429,0,1,0,2.857,0V48.754a.354.354,0,0,1,.317-.353,5.213,5.213,0,0,0,3.366-1.821.18.18,0,0,0-.138-.295H113.45A.178.178,0,0,0,113.316,46.58Z"
+                        transform="translate(-111.999 -32)" fill="url(#linear-gradient)" />
+                </svg>
+            </a></li>
+        <li class="footer-list__item"><a href="" class="footer-list__link"><svg class="signal-icon"
+                    xmlns="http://www.w3.org/2000/svg" width="27.083" height="25" viewBox="0 0 27.083 25">
+                    <path class="signal"
+                        d="M61.542,74.724A2.681,2.681,0,1,0,64.25,77.4,2.7,2.7,0,0,0,61.542,74.724ZM69.667,77.4a8.125,8.125,0,1,0-12.188,6.971l1.355-2.346A5.288,5.288,0,0,1,56.125,77.4a5.417,5.417,0,0,1,10.833,0A5.288,5.288,0,0,1,64.25,82.03L65.6,84.376A8.069,8.069,0,0,0,69.667,77.4ZM61.542,64A13.513,13.513,0,0,0,48,77.4,13.354,13.354,0,0,0,54.771,89l1.354-2.346A10.657,10.657,0,0,1,50.708,77.4a10.834,10.834,0,0,1,21.668,0,10.576,10.576,0,0,1-5.417,9.249L68.313,89a13.354,13.354,0,0,0,6.771-11.6A13.513,13.513,0,0,0,61.542,64Z"
+                        transform="translate(-48 -64)" fill="#fff" />
+                </svg>
+
+
+            </a></li>
+        <li class="footer-list__item theme-mode"><svg class="contrast" xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink" width="20" height="20" viewBox="0 0 20 20">
+                <defs>
+                    <linearGradient id="linear-gradient" y1="0.5" x2="1" y2="0.5" gradientUnits="objectBoundingBox">
+                        <stop offset="0" stop-color="#ee0979" />
+                        <stop offset="1" stop-color="#ff6a00" />
+                    </linearGradient>
+                </defs>
+                <path id="_ionicons_svg_ios-contrast"
+                    d="M58,48A10,10,0,1,0,68,58,10,10,0,0,0,58,48Zm6.12,16.12A8.6,8.6,0,0,1,58,66.654V49.346A8.655,8.655,0,0,1,64.12,64.12Z"
+                    transform="translate(-48 -48)" fill="url(#linear-gradient)" />
+            </svg>
+        </li>
+        <li class="footer-list__item"><a href="/categories" class="footer-list__link"><svg
+                    xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="18.547"
+                    height="19.375" viewBox="0 0 18.547 19.375">
+                    <defs>
+                        <linearGradient id="linear-gradient" y1="0.5" x2="1" y2="0.5" gradientUnits="objectBoundingBox">
+                            <stop offset="0" stop-color="#ee0979" />
+                            <stop offset="1" stop-color="#ff6a00" />
+                        </linearGradient>
+                    </defs>
+                    <path id="Path_343" data-name="Path 343"
+                        d="M7.383-6.133a8.034,8.034,0,0,0,0-2.734l1.641-.977a.421.421,0,0,0,.215-.234.515.515,0,0,0,.02-.312,9.7,9.7,0,0,0-2.148-3.672.579.579,0,0,0-.273-.156.441.441,0,0,0-.312.039L4.883-13.2A7.48,7.48,0,0,0,2.5-14.57v-1.914a.5.5,0,0,0-.1-.293.434.434,0,0,0-.254-.176,9.964,9.964,0,0,0-4.3,0,.434.434,0,0,0-.254.176.5.5,0,0,0-.1.293v1.914A7.48,7.48,0,0,0-4.883-13.2l-1.641-.977a.441.441,0,0,0-.312-.039.58.58,0,0,0-.273.156,9.7,9.7,0,0,0-2.148,3.672.515.515,0,0,0,.02.313.421.421,0,0,0,.215.234l1.641.977a8.034,8.034,0,0,0,0,2.734l-1.641.977a.421.421,0,0,0-.215.234.515.515,0,0,0-.02.313A9.7,9.7,0,0,0-7.109-.937a.579.579,0,0,0,.273.156A.441.441,0,0,0-6.523-.82L-4.883-1.8A7.48,7.48,0,0,0-2.5-.43V1.484a.5.5,0,0,0,.1.293.434.434,0,0,0,.254.176,9.964,9.964,0,0,0,4.3,0A.434.434,0,0,0,2.4,1.777a.5.5,0,0,0,.1-.293V-.43A7.48,7.48,0,0,0,4.883-1.8L6.523-.82a.441.441,0,0,0,.313.039.579.579,0,0,0,.273-.156A9.7,9.7,0,0,0,9.258-4.609a.515.515,0,0,0-.02-.312.421.421,0,0,0-.215-.234ZM3.125-7.5a3.009,3.009,0,0,1-.918,2.207A3.009,3.009,0,0,1,0-4.375a3.009,3.009,0,0,1-2.207-.918A3.009,3.009,0,0,1-3.125-7.5a3.009,3.009,0,0,1,.918-2.207A3.009,3.009,0,0,1,0-10.625a3.009,3.009,0,0,1,2.207.918A3.009,3.009,0,0,1,3.125-7.5Z"
+                        transform="translate(9.273 17.188)" fill="url(#linear-gradient)" />
+                </svg>
+            </a></li>
     </ul>
 </nav>
