--- a/src/html/templates/featured.ejs
+++ b/src/html/templates/featured.ejs
@@ -26,13 +26,16 @@
     </article>
 </main>
 <template id="featured-template">
-    <li class="featured-list__item">
-        <img class="featured-list__img" src="https://via.placeholder.com/325x425" alt="placeholder">
-        <div class="featured-list__text-container">
-            <h2 class="featured-list__heading"></h2>
-            <h3 class="featured-list__sub-heading"></h3>
-        </div>
-    </li>
+    <a href="">
+
+        <li class="featured-list__item">
+            <img class="featured-list__img" src="https://via.placeholder.com/325x425" alt="placeholder">
+            <!--         <div class="featured-list__text-container">
+                <h2 class="featured-list__heading"></h2>
+                <h3 class="featured-list__sub-heading"></h3>
+            </div> -->
+        </li>
+    </a>
 </template>
 <!-- <script src="/assets/javascript/main.js"></script> -->
 <%- include("../partials/footer-nav.ejs") %>
