--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -4,6 +4,9 @@
 
 @import './components/nav';
 @import'./components/utilities';
+@import'./components/spinner';
+
+
 
 // Main Components
 @import'./components/featured';
