--- a/src/html/templates/albums.ejs
+++ b/src/html/templates/albums.ejs
@@ -1,5 +1,5 @@
 <%- include("../partials/head.ejs") %>
-<title>Featured</title>
+<title>Albums</title>
 <%- include("../partials/nav.ejs") %>
 
 <main>
@@ -63,7 +63,9 @@
     </article>
 
 </main>
-<template id="albumTemplate"><a href="">
+<template id="albumTemplate">
+
+    <a class="img-list__link" href="">
 
         <li class="img-list__item"> <img class="img-list__img" src="https://via.placeholder.com/130x130"
                 alt="placeholder">
