--- a/src/html/templates/featured.ejs
+++ b/src/html/templates/featured.ejs
@@ -29,6 +29,7 @@
     <a href="">
 
         <li class="featured-list__item">
+            <div class="spinner"></div>
             <img class="featured-list__img" src="https://via.placeholder.com/325x425" alt="placeholder">
             <!--         <div class="featured-list__text-container">
                 <h2 class="featured-list__heading"></h2>
