--- a/src/html/templates/player.ejs
+++ b/src/html/templates/player.ejs
@@ -1,5 +1,5 @@
 <%- include("../partials/head.ejs") %>
-<title>Featured</title>
+<title>Player</title>
 <%- include("../partials/nav.ejs") %>
 
 <main>
@@ -42,3 +42,4 @@
 
 </main>
 <%- include("../partials/after-footer.ejs") %>
+<script src="/assets/javascript/playerPage.js"></script>
