--- a/src/css/components/_albumDetails.scss
+++ b/src/css/components/_albumDetails.scss
@@ -7,21 +7,31 @@
     .albumDetails-showcase {
         position: relative;
 
+        .albumDetails-showcase__img {
+            width: 375px;
+            height: 400px;
+        }
+
         .albumDetails__text-container {
             padding: 0 1.625rem;
             -padding: $view-margin;
             color: #fff;
 
             .albumDetails__heading {
+                width: 320px;
                 position: absolute;
                 top: 5.1875rem;
                 font-size: 2.25rem;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+
 
             }
 
             .albumDetails__numOfTracks {
                 position: absolute;
-                top: 7.4375rem;
+                top: 8.4375rem;
                 font-size: 15px;
 
             }
@@ -54,7 +64,26 @@
                         font-size: 15px;
                         text-decoration: none;
                         font-weight: 500;
+                        text-transform: capitalize;
 
+
+                    }
+
+                    .second-hashtag {
+                        width: 70px;
+                        height: 41px;
+                        background-color: #FF1168;
+                        padding: 0.6em;
+                        border-radius: 20px;
+                        -text-align: center;
+                        -place-self: center;
+                        display: flex;
+                        align-self: center;
+                        color: #fff;
+                        font-size: 15px;
+                        text-decoration: none;
+                        font-weight: 500;
+                        text-transform: capitalize;
                     }
                 }
 
@@ -97,12 +126,14 @@
                     grid-template-rows: 1fr 1fr;
                     text-decoration: none;
 
+
                     .track-list__track-name {
                         text-decoration: none;
                         text-transform: capitalize;
                         font-size: 15px;
                         font-weight: 600;
                         color: $primary-color;
+
                     }
 
                     .track-list__track-artist {
@@ -117,7 +148,7 @@
 
                     }
 
-                    .track-list__numOfTracks {
+                    .track-list__length {
                         text-decoration: none;
                         text-transform: capitalize;
                         font-size: 12px;
