--- a/src/css/components/_player.scss
+++ b/src/css/components/_player.scss
@@ -1,6 +1,6 @@
 .player-page {
-    -height: 107vh;
     width: 100vw;
+    -height: 812px;
     background: url('https://via.placeholder.com/1200x1000');
     background-repeat: no-repeat;
     background-position: center top;
@@ -11,7 +11,7 @@
     .avatar {
 
         .avatar-img {
-            margin: 10.9375rem 3.125rem 4.1875rem;
+            margin: 4.9375rem 3.125rem 4.1875rem;
 
             width: 225px;
             height: 225px;
@@ -26,7 +26,7 @@
         .player__song-info {
             text-align: center;
             color: #ffffff;
-            padding: 1rem;
+            //padding: 1rem;
 
             .player__song-name {
                 font-size: 1.25rem;
