--- a/src/html/partials/head.ejs
+++ b/src/html/partials/head.ejs
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="/assets/css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,700,900&display=swap" rel="stylesheet">
-    <title>featured</title>
+    <!--  title>featured</title>-->
 </head>
 
 <body>
