--- a/src/html/templates/playlist.ejs
+++ b/src/html/templates/playlist.ejs
@@ -1,4 +1,5 @@
 <%- include("../partials/head.ejs") %>
+<title>Playlist</title>
 <%- include("../partials/nav.ejs") %>
 
 <main>
@@ -7,13 +8,13 @@
             <h1 class="playlist-heading">playlist</h1>
             <div class="slider">
                 <img class="slider-img" src="https://via.placeholder.com/155x155" alt="placeholder">
-                <img class="slider-img" src="https://via.placeholder.com/155x155" alt="placeholder">
+                <img class="slider-img__1" src="https://via.placeholder.com/155x155" alt="placeholder">
 
                 <img class="slider-img" src="https://via.placeholder.com/155x155" alt="placeholder">
 
             </div>
             <h2 class="playlist-genre">top 50</h2>
-            <h2 class="playlist-genre">rock ballads</h2>
+            <!--   <h2 class="playlist-genre">rock ballads</h2> -->
 
 
 
@@ -23,7 +24,7 @@
 
 
             <ul class="play-list">
-                <li class="play-list__items">
+                <!-- <li class="play-list__items">
                     <figure class="play-list__img-bg">
                         <img class="play-list__img" src="/assets/images/ionplay.svg" alt=""
                             class="play-list__play-cover">
@@ -39,26 +40,8 @@
 
                         <a class="play-list__numOfPlays" href="">12 plays</a>
                     </article>
-                </li>
-                <li class="play-list__items">
-                    <figure class="play-list__img-bg">
-                        <img class="play-list__img" src="/assets/images/ionplay.svg" alt=""
-                            class="play-list__play-cover">
-
-                    </figure>
-                    <article class="play-list__play-text">
-
-                        <a class="play-list__play-name" href="">play name</a>
-
-
-
-
-                        <a class="play-list__play-artist" href="">Artist</a>
-
-                        <a class="play-list__numOfPlays" href="">12 plays</a>
-                    </article>
-                </li>
-                <li class="play-list__items">
+                </li> -->
+                <!-- <li class="play-list__items">
                     <figure class="play-list__img-bg">
                         <img class="play-list__img" src="/assets/images/ionplay.svg" alt=""
                             class="play-list__play-cover">
@@ -94,6 +77,24 @@
                         <a class="play-list__numOfPlays" href="">12 plays</a>
                     </article>
                 </li>
+                <li class="play-list__items">
+                    <figure class="play-list__img-bg">
+                        <img class="play-list__img" src="/assets/images/ionplay.svg" alt=""
+                            class="play-list__play-cover">
+
+                    </figure>
+                    <article class="play-list__play-text">
+
+                        <a class="play-list__play-name" href="">play name</a>
+
+
+
+
+                        <a class="play-list__play-artist" href="">Artist</a>
+
+                        <a class="play-list__numOfPlays" href="">12 plays</a>
+                    </article>
+                </li> -->
 
             </ul>
             <h3 class="listenToAll"><a href="" class="listen-link">listen all</a></h3>
@@ -102,5 +103,26 @@
 
 
 </main>
+<template id="playlistTemplate">
+    <li class="play-list__items">
+        <figure class="play-list__img-bg">
+            <img class="play-list__img" src="/assets/images/ionplay.svg" alt="" class="play-list__play-cover">
+
+        </figure>
+        <article class="play-list__play-text">
+
+            <a class="play-list__play-name" href="">play name</a>
+
+
+
+
+            <a class="play-list__play-artist" href="">Artist</a>
+
+            <a class="play-list__numOfPlays" href="">12 plays</a>
+        </article>
+    </li>
+
+</template>
 <%- include("../partials/footer-nav.ejs") %>
 <%- include("../partials/after-footer.ejs") %>
+<script src="/assets/javascript/playlistPage.js"></script>
